testsuite/tests/properties/invalid_at/no_arg.lkt
import common

class BarNode: FooNode {
    @export fun bar_prop(): Int = node.singleton()[]
}
